<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.RegistrationFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bookshelf"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/twenty_four_dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:text="Register"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_username"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:layout_marginHorizontal="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:layout_marginHorizontal="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@+id/etUserName"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:layout_marginHorizontal="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/spinnerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_country"
            android:textSize="@dimen/sixteen_sp"
            style="@style/MaterialAlertDialog.Material3.Body.Text"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_marginVertical="@dimen/eight_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/countrySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/eight_dp"
            app:layout_constraintStart_toEndOf="@id/spinnerLabel"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="@dimen/sixteen_dp"
        app:layout_constraintTop_toBottomOf="@id/ll_country_layout"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llLoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@id/signupButton">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="@dimen/four_dp"
            android:textColor="@color/dark_blue"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>