<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/eight_dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bookshelf"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/twenty_four_dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logo"
                style="@style/MaterialAlertDialog.Material3.Title.Text"
                android:text="@string/login"
                android:textAlignment="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:layout_marginTop="@dimen/fourty_eight_dp"
                android:layout_marginHorizontal="@dimen/eight_dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:layout_marginHorizontal="@dimen/eight_dp"
                app:layout_constraintTop_toBottomOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="@dimen/sixteen_dp"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llSignUpPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/eight_dp"
                app:layout_constraintTop_toBottomOf="@id/loginButton">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignUpPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginStart="@dimen/four_dp"
                    android:textColor="@color/light_blue"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </ScrollView>



    <include
        android:id="@+id/progress_bar"
        layout="@layout/layout_progressbar"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>